fix spacing

--- a/src/styles/spectate.scss
+++ b/src/styles/spectate.scss
@@ -73,6 +73,7 @@ b {
 .cover {
   width: 100%;
   height: 100vh;
+  margin-bottom: 40px;
 
   img {
     width: 100%;
@@ -87,7 +88,7 @@ b {
     background-color: rgba(0, 0, 0, 0.43);
     max-width: 700px;
     color: #fff;
-    transform: translateY(-40vh);
+    transform: translateY(-80vh);
     align-items: center;
 
     p, h1 {
@@ -110,7 +111,7 @@ b {
     background-color: rgba(0, 0, 0, 0.43);
     max-width: 700px;
     color: #fff;
-    transform: translateY(-40vh);
+    transform: translateY(-70vh);
     align-items: center;
 
     p, h1 {
